[gd_scene load_steps=14 format=3 uid="uid://dsyn6vhleapg5"]

[ext_resource type="Script" path="res://show_control_tools/show_controller.gd" id="1_61e5p"]
[ext_resource type="Theme" uid="uid://clxvc62b6rnod" path="res://hud.tres" id="2_ft7v3"]
[ext_resource type="FontFile" uid="uid://svibhget44bt" path="res://fonts/AnekDevanagari-VariableFont_wdth,wght.ttf" id="3_x11yp"]
[ext_resource type="FontFile" uid="uid://dyytt1gjmcsoo" path="res://fonts/Cholvine.ttf" id="4_gscut"]

[sub_resource type="Theme" id="Theme_pfa6h"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_3xli1"]
bg_color = Color(0.392157, 0.0980392, 0.584314, 1)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_sa0g1"]
content_margin_left = 7.0
bg_color = Color(0.277775, 0.118812, 0.382168, 1)
border_width_left = 5
border_width_top = 5
border_width_right = 5
border_width_bottom = 5
border_color = Color(0.882353, 0.0980392, 0.584314, 1)
border_blend = true
corner_radius_top_left = 6
corner_radius_top_right = 6
corner_radius_bottom_right = 6
corner_radius_bottom_left = 6
shadow_color = Color(0, 0, 0, 0)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_rifnc"]
bg_color = Color(0.882353, 0.0980392, 0.584314, 1)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_x4j37"]
bg_color = Color(0.882353, 0.0980392, 0.584314, 1)

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_5h4is"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_vousy"]
bg_color = Color(0.058491, 0.203422, 0.189873, 1)
corner_radius_top_left = 20
corner_radius_top_right = 20
corner_radius_bottom_right = 8
corner_radius_bottom_left = 8

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_hwdx1"]
bg_color = Color(0.254902, 0.870588, 0.537255, 1)
corner_radius_top_left = 20
corner_radius_top_right = 20
corner_radius_bottom_right = 8
corner_radius_bottom_left = 8

[sub_resource type="Theme" id="Theme_ro8u2"]
Button/font_sizes/font_size = 23
Button/fonts/font = ExtResource("3_x11yp")
Button/styles/normal = null
ItemList/colors/font_color = Color(0.750976, 0.758488, 0.999999, 1)
ItemList/constants/v_separation = 11
ItemList/font_sizes/font_size = 21
ItemList/fonts/font = ExtResource("3_x11yp")
ItemList/styles/hovered = SubResource("StyleBoxFlat_3xli1")
ItemList/styles/panel = SubResource("StyleBoxFlat_sa0g1")
ItemList/styles/selected = SubResource("StyleBoxFlat_rifnc")
ItemList/styles/selected_focus = SubResource("StyleBoxFlat_x4j37")
Label/font_sizes/font_size = 55
Label/fonts/font = ExtResource("4_gscut")
Label/styles/normal = SubResource("StyleBoxEmpty_5h4is")
ProgressBar/styles/background = SubResource("StyleBoxFlat_vousy")
ProgressBar/styles/fill = SubResource("StyleBoxFlat_hwdx1")

[node name="showController" type="CanvasLayer"]
script = ExtResource("1_61e5p")
adminKeyNumber = 69

[node name="ColorRect" type="ColorRect" parent="."]
z_index = -2
offset_right = 480.0
offset_bottom = 720.0
color = Color(0.776543, 0.592643, 1.34766e-06, 1)
metadata/_edit_lock_ = true

[node name="cheatBG" type="ColorRect" parent="."]
z_index = -1
offset_left = 179.0
offset_top = 2.0
offset_right = 479.0
offset_bottom = 146.0
theme = SubResource("Theme_pfa6h")
color = Color(0.341176, 0.196078, 0.615686, 1)

[node name="cheatBG2" type="ColorRect" parent="."]
z_index = -1
offset_left = 343.0
offset_top = 167.0
offset_right = 479.0
offset_bottom = 717.0
theme = SubResource("Theme_pfa6h")
color = Color(0.341176, 0.196078, 0.615686, 1)

[node name="cheatBG3" type="ColorRect" parent="."]
z_index = -1
offset_left = 263.0
offset_top = 660.0
offset_right = 479.0
offset_bottom = 717.0
theme = SubResource("Theme_pfa6h")
color = Color(0.341176, 0.196078, 0.615686, 1)

[node name="pageSetText" type="LineEdit" parent="."]
offset_left = 4.0
offset_top = 21.0
offset_right = 71.0625
offset_bottom = 52.0

[node name="pageSetButton" type="Button" parent="."]
offset_left = 74.0
offset_top = 21.0
offset_right = 148.0
offset_bottom = 52.0
text = "Set Page"

[node name="pageSetHTTPRequest" type="HTTPRequest" parent="."]

[node name="statusUpdateHTTPRequest" type="HTTPRequest" parent="."]

[node name="statusUpdateButton" type="Button" parent="."]
offset_left = 3.0
offset_top = 76.0
offset_right = 148.0
offset_bottom = 107.0
text = "Get Server Status"

[node name="UpdateBarsCheck" type="CheckButton" parent="."]
offset_left = 3.0
offset_top = 111.0
offset_right = 151.0
offset_bottom = 142.0
text = "Update Bars"
alignment = 2

[node name="DelayCheck" type="CheckButton" parent="."]
offset_left = 3.0
offset_top = 135.0
offset_right = 151.0
offset_bottom = 166.0
text = "Delay 5s"
alignment = 2

[node name="SetVoteButton" type="Button" parent="."]
offset_left = 3.0
offset_top = 500.0
offset_right = 148.0
offset_bottom = 531.0
disabled = true
text = "Set Generic Poll"

[node name="updateDelayTimer" type="Timer" parent="."]
wait_time = 5.0
one_shot = true

[node name="serverStatusLabel" type="Label" parent="."]
offset_left = 7.0
offset_top = 169.0
offset_right = 154.0
offset_bottom = 339.0
text = "Page: X
Epoch: 1724811254
Seconds:
PhaseID:
RoundHP:
RoundMP:"

[node name="HPCheatStatic" type="Label" parent="."]
offset_left = 7.0
offset_top = 328.0
offset_right = 154.0
offset_bottom = 353.0
text = "HP Set    Max"

[node name="toBeSeen" type="Control" parent="."]
layout_mode = 3
anchors_preset = 0
offset_left = 180.0
offset_right = 479.0
offset_bottom = 720.0
metadata/_edit_lock_ = true

[node name="theWordMagic" type="Label" parent="toBeSeen"]
layout_mode = 0
offset_left = 221.0
offset_top = 613.0
offset_right = 404.0
offset_bottom = 697.0
theme = ExtResource("2_ft7v3")
theme_override_font_sizes/font_size = 43
text = " MP"

[node name="theWordLife" type="Label" parent="toBeSeen"]
layout_mode = 0
offset_left = 34.0
offset_top = 612.0
offset_right = 217.0
offset_bottom = 696.0
theme = ExtResource("2_ft7v3")
theme_override_font_sizes/font_size = 43
text = "HP"
horizontal_alignment = 2

[node name="theWordAudience" type="Label" parent="toBeSeen"]
layout_mode = 0
offset_left = 88.0
offset_top = 647.0
offset_right = 295.0
offset_bottom = 731.0
theme = ExtResource("2_ft7v3")
text = "Audience"

[node name="HPBar" type="ProgressBar" parent="toBeSeen"]
offset_left = 170.0
offset_top = 176.0
offset_right = 226.0
offset_bottom = 622.0
theme = ExtResource("2_ft7v3")
fill_mode = 3
show_percentage = false

[node name="MPBar" type="ProgressBar" parent="toBeSeen"]
offset_left = 238.0
offset_top = 176.0
offset_right = 294.0
offset_bottom = 622.0
theme = SubResource("Theme_ro8u2")
fill_mode = 3
show_percentage = false

[node name="damageLastRound" type="Label" parent="toBeSeen"]
layout_mode = 0
offset_left = 130.0
offset_top = -19.0
offset_right = 289.0
offset_bottom = 97.0
theme = ExtResource("2_ft7v3")
theme_override_font_sizes/font_size = 76
text = "6666"

[node name="mpLastRound" type="Label" parent="toBeSeen"]
layout_mode = 0
offset_left = 130.0
offset_top = 53.0
offset_right = 289.0
offset_bottom = 169.0
theme = ExtResource("2_ft7v3")
theme_override_font_sizes/font_size = 76
text = "6666"

[node name="DamageStatic" type="Label" parent="toBeSeen"]
layout_mode = 0
offset_left = 6.0
offset_top = -1.0
offset_right = 125.0
offset_bottom = 69.0
theme_override_constants/line_spacing = -14
theme_override_font_sizes/font_size = 30
text = "Damage
Taken"
horizontal_alignment = 2

[node name="MPStatic" type="Label" parent="toBeSeen"]
layout_mode = 0
offset_left = 10.0
offset_top = 73.0
offset_right = 124.0
offset_bottom = 143.0
theme_override_constants/line_spacing = -14
theme_override_font_sizes/font_size = 30
text = "Magic
Gained"
horizontal_alignment = 2

[node name="HPSet" type="LineEdit" parent="."]
offset_left = 4.0
offset_top = 352.0
offset_right = 71.0625
offset_bottom = 383.0

[node name="HPMax" type="LineEdit" parent="."]
offset_left = 76.0
offset_top = 352.0
offset_right = 143.063
offset_bottom = 383.0

[node name="HPCheatStatic2" type="Label" parent="."]
offset_left = 7.0
offset_top = 396.0
offset_right = 154.0
offset_bottom = 421.0
text = "MP Set    Max"

[node name="MPSet" type="LineEdit" parent="."]
offset_left = 4.0
offset_top = 420.0
offset_right = 71.0625
offset_bottom = 451.0

[node name="MPMax" type="LineEdit" parent="."]
offset_left = 76.0
offset_top = 420.0
offset_right = 143.063
offset_bottom = 451.0

[connection signal="text_changed" from="pageSetText" to="." method="_on_page_set_text_text_changed"]
[connection signal="pressed" from="pageSetButton" to="." method="_on_page_set_button_pressed"]
[connection signal="pressed" from="statusUpdateButton" to="." method="_on_status_update_button_pressed"]
[connection signal="timeout" from="updateDelayTimer" to="." method="_on_update_delay_timer_timeout"]
[connection signal="text_submitted" from="HPSet" to="." method="_on_hp_set_text_submitted"]
[connection signal="text_submitted" from="HPMax" to="." method="_on_hp_max_text_submitted"]
[connection signal="text_submitted" from="MPSet" to="." method="_on_mp_set_text_submitted"]
[connection signal="text_submitted" from="MPMax" to="." method="_on_mp_max_text_submitted"]
